--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Hassaan Ibrahim # your name (or website title) here
 logo: "images/1637297105896.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Enthusiast Data Scientist with 1 year of experience working with 
+  Enthusiast Data Scientist with 1 year of experience working with various machine learning and deep learning (NLP/CV) models in a academic setting. Passionate to expand my horizons. 
   <br><br>
   Junior year Computer Science student at <a href="http://www.pieas.edu.pk/">PIEAS</a>. Currently looking for a summer internship. Reach out to me at <a href="mailto: hassaanibrahim9@gmail.com">hassaanibrahim9@gmail.com</a>
   <br><br>
