--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Junior year Computer Science student at <a href="http://www.pieas.edu.pk/">PIEAS</a>. Currently looking for a summer internship. Reach out to me at <a href="mailto: hassaanibrahim9@gmail.com">hassaanibrahim9@gmail.com</a>
   <br><br>
+  <a href=https://www.linkedin.com/in/hassaanibrahim/">View My LinkedIn Profile</a>
   <a href="pdf/Muhammad_Hassaan_Ibrahim_CV.pdf">View My Resume</a> 
   
   
