--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hassaan Ibrahim # your name (or website title) here
-logo: "images/1637297105896.jpg" # your photo (or logo) here
+title: Muhammad Hassaan Ibrahim # your name (or website title) here
+logo: "1718724376852.jpeg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Enthusiast Data Scientist with 1 year of experience working with various machine learning and deep learning (NLP/CV) models in a academic setting. Passionate to expand my horizons. 
   <br><br>
